Prep repo for heroku

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "boilerplate",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts":{
+    "start": "node server.js"
+  },
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.1",
